--- a/nginx.conf
+++ b/nginx.conf
@@ -7,4 +7,9 @@ server {
         index index.html;
         try_files $uri $uri/ /index.html;
     }
+
+    # Optional: Add CORS headers
+    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+    add_header 'Access-Control-Allow-Headers' 'X-Requested-With,Content-Type,Authorization';
 }
