--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,19 @@ services:
   - type: web
     name: utdrs-frontend
     env: docker
-    repo: https://github.com/yourusername/utdrs-frontend.git  # Update with your repo
-    branch: main
+    plan: free
     dockerfilePath: ./Dockerfile
     dockerContext: .
     envVars:
       - key: NODE_ENV
         value: production
+    headers:
+      - path: /*
+        name: Access-Control-Allow-Origin
+        value: "*"
+      - path: /*
+        name: Access-Control-Allow-Methods
+        value: "GET, POST, OPTIONS, PUT, DELETE"
+      - path: /*
+        name: Access-Control-Allow-Headers
+        value: "X-Requested-With, Content-Type, Authorization"
