--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.10.1",
     "tailwindcss": "^3.3.3",
     "postcss": "^8.4.27",
-    "autoprefixer": "^10.4.14"
+    "autoprefixer": "^10.4.14",
+    "ajv": "^8.12.0"
   },
   "devDependencies": {
     "react-scripts": "^5.0.1",
