--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
   "name": "utdrs-frontend",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
-  "description": "Frontend for the Unified Threat Detection and Response System",
+  "description": "Frontend for the Unified Threat Detection and Response System (UTDRS)",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "axios": "^1.4.0",
-    "jwt-decode": "^3.1.2",
     "react-query": "^3.39.3",
     "chart.js": "^4.3.3",
     "react-chartjs-2": "^5.2.0",
-    "formik": "^2.4.3",
-    "yup": "^1.2.0",
-    "date-fns": "^2.30.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "^3.3.3",
     "postcss": "^8.4.27",
-    "autoprefixer": "^10.4.14",
-    "ajv": "^8.12.0"
+    "autoprefixer": "^10.4.14"
   },
   "devDependencies": {
     "react-scripts": "^5.0.1",
