--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
     "react-icons": "^4.10.1",
     "tailwindcss": "^3.3.3",
     "postcss": "^8.4.27",
-    "autoprefixer": "^10.4.14",
-    "jwt-decode": "^3.1.2"
+    "autoprefixer": "^10.4.14"
   },
   "devDependencies": {
     "react-scripts": "^5.0.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/node": "^20.5.0",
-    "@types/jwt-decode": "^3.1.0",
     "typescript": "^4.9.5"
   },
   "scripts": {
